@@ -4,14 +4,16 @@ import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.core.io.ByteArrayResource;
 import org.springframework.core.io.ResourceLoader;
+import org.springframework.hateoas.EntityModel;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.mock.web.MockMultipartFile;
 
 import ca.gc.aafc.dina.workbook.WorkbookConverter;
-import ca.gc.aafc.dina.workbook.WorkbookRow;
+import ca.gc.aafc.dina.workbook.WorkbookSheet;
 import ca.gc.aafc.objectstore.api.BaseIntegrationTest;
+import ca.gc.aafc.objectstore.api.dto.WorkbookGenerationDto;
 import ca.gc.aafc.objectstore.api.testsupport.factories.MultipartFileFactory;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -35,28 +37,28 @@ public class WorkbookGeneratorTest extends BaseIntegrationTest {
   public void fileUploadConversion_OnValidSpreadsheet_contentReturned() throws Exception {
     MockMultipartFile
       mockFile = MultipartFileFactory.createMockMultipartFile(resourceLoader,"test_spreadsheet.xlsx", MediaType.APPLICATION_OCTET_STREAM_VALUE);
-    Map<Integer, List<WorkbookRow>> content = workbookTemplateController.handleFileConversion(mockFile);
-    assertFalse(content.isEmpty());
-    assertFalse(content.get(0).isEmpty());
+    Map<Integer, WorkbookSheet> workbook = workbookTemplateController.handleFileConversion(mockFile);
+    assertFalse(workbook.isEmpty());
+    assertFalse(workbook.get(0).rows().isEmpty());
   }
 
   @Test
   public void fileUploadConversion_OnValidCSV_contentReturned() throws Exception {
     // use Octet Stream to make sure the FileController will detect it's a csv
     MockMultipartFile mockFile = MultipartFileFactory.createMockMultipartFile(resourceLoader,"test_spreadsheet.csv", MediaType.APPLICATION_OCTET_STREAM_VALUE);
-    Map<Integer, List<WorkbookRow>> content = workbookTemplateController.handleFileConversion(mockFile);
-    assertFalse(content.isEmpty());
-    assertFalse(content.get(0).isEmpty());
+    Map<Integer, WorkbookSheet> workbook = workbookTemplateController.handleFileConversion(mockFile);
+    assertFalse(workbook.isEmpty());
+    assertFalse(workbook.get(0).rows().isEmpty());
   }
 
   @Test
   public void generateWorkbookTemplateFromColumns_OnValidColumns_contentReturned() throws Exception {
-    ResponseEntity<ByteArrayResource> response = workbookTemplateController.generateWorkbookTemplateFromColumns(List.of("col 1", "col 2"));
+    ResponseEntity<ByteArrayResource> response = workbookTemplateController.generateWorkbookTemplateFromColumns(
+      EntityModel.of(WorkbookGenerationDto.builder().columns(List.of("col 1", "col 2")).build()));
     assertNotNull(response.getHeaders());
     assertEquals(response.getStatusCode(), HttpStatus.CREATED);
     assertNotNull(response.getBody());
     var result = WorkbookConverter.convertWorkbook(response.getBody().getInputStream());
-    assertEquals("col 1", result.get(0).get(0).content()[0]);
+    assertEquals("col 1", result.get(0).rows().getFirst().content()[0]);
   }
-
 }
